After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667982 - duplicate typedefs
duplicate typedefs
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
3.3.x
Other Linux
: Normal critical
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2012-01-16 03:32 UTC by Yuri Sedunov
Modified: 2012-01-16 09:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Yuri Sedunov 2012-01-16 03:32:24 UTC
while compiling seahorse 3.3.3 error raised:
In file included from seahorse-actions.h:28:0,
                 from seahorse-action.c:26:
seahorse-object.h:55:31: error: redefinition of typedef 'SeahorsePlace'
seahorse-place.h:44:31: note: previous declaration of 'SeahorsePlace' was here
In file included from seahorse-context.h:29:0,
                 from seahorse-widget.h:29,
                 from seahorse-catalog.h:27,
                 from seahorse-actions.h:29,
                 from seahorse-actions.c:25:
seahorse-place.h:44:31: error: redefinition of typedef 'SeahorsePlace'
seahorse-object.h:55:31: note: previous declaration of 'SeahorsePlace' was here
make[3]: *** [seahorse-actions.lo] Error 1
make[3]: *** Waiting for unfinished jobs....
make[3]: *** [seahorse-action.lo] Error 1
In file included from seahorse-actions.h:28:0,
                 from seahorse-catalog.c:26:
seahorse-object.h:55:31: error: redefinition of typedef 'SeahorsePlace'
seahorse-place.h:44:31: note: previous declaration of 'SeahorsePlace' was here
make[3]: *** [seahorse-catalog.lo] Error 1
make[3]: Leaving directory `/usr/src/RPM/BUILD/seahorse-3.3.3/libseahorse'
Comment 1 Stef Walter 2012-01-16 09:49:12 UTC
Thanks. Fixed in git master.