Fix duplicate typedef of SeahorsePlace

https://bugzilla.gnome.org/show_bug.cgi?id=667982